// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`designSystem\` case buildType is bundle 1`] = `
"/* src/index.css */
.box {
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
}
"
`;

exports[`\`designSystem\` case buildType is bundleless 1`] = `
".box {
  --tw-bg-opacity: 1;
  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
}
"
`;
